crates/textual/tests/snapshots/examples_snapshot__snapshot_align_all_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---
┌────────────────────────┐ ┌────────────────────────┐ ┌────────────────────────┐
│left top                │ │       center top       │ │               right top│
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
└────────────────────────┘ └────────────────────────┘ └────────────────────────┘

┌────────────────────────┐ ┌────────────────────────┐ ┌────────────────────────┐
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
│left middle             │ │     center middle      │ │            right middle│
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
└────────────────────────┘ └────────────────────────┘ └────────────────────────┘

┌────────────────────────┐ ┌────────────────────────┐ ┌────────────────────────┐
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
│                        │ │                        │ │                        │
│left bottom             │ │     center bottom      │ │            right bottom│
└────────────────────────┘ └────────────────────────┘ └────────────────────────┘
