crates/textual/tests/snapshots/examples_snapshot__snapshot_align_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---







                      ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
                      ┃                                    ┃
                      ┃ Vertical alignment with Textual    ┃
                      ┃                                    ┃
                      ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛

                      ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
                      ┃                                    ┃
                      ┃ Take note, browsers.               ┃
                      ┃                                    ┃
                      ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
