crates/textual/tests/snapshots/examples_snapshot__snapshot_background_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---



                                    darkred







                                     orange







                                     green
