crates/textual/tests/snapshots/examples_snapshot__snapshot_background_example_ansi.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_ansi_snapshot()
---
[38;2;255;255;255m[48;2;139;0;0m                                                                                [0m
[38;2;255;255;255m[48;2;139;0;0m                                                                                [0m
[38;2;255;255;255m[48;2;139;0;0m                                                                                [0m
[38;2;255;255;255m[48;2;139;0;0m                                    darkred                                     [0m
[38;2;255;255;255m[48;2;139;0;0m                                                                                [0m
[38;2;255;255;255m[48;2;139;0;0m                                                                                [0m
[38;2;255;255;255m[48;2;139;0;0m                                                                                [0m
[38;2;255;255;255m[48;2;139;0;0m                                                                                [0m
[38;2;255;255;255m[48;2;255;165;0m                                                                                [0m
[38;2;255;255;255m[48;2;255;165;0m                                                                                [0m
[38;2;255;255;255m[48;2;255;165;0m                                                                                [0m
[38;2;255;255;255m[48;2;255;165;0m                                     orange                                     [0m
[38;2;255;255;255m[48;2;255;165;0m                                                                                [0m
[38;2;255;255;255m[48;2;255;165;0m                                                                                [0m
[38;2;255;255;255m[48;2;255;165;0m                                                                                [0m
[38;2;255;255;255m[48;2;255;165;0m                                                                                [0m
[38;2;255;255;255m[48;2;0;128;0m                                                                                [0m
[38;2;255;255;255m[48;2;0;128;0m                                                                                [0m
[38;2;255;255;255m[48;2;0;128;0m                                                                                [0m
[38;2;255;255;255m[48;2;0;128;0m                                     green                                      [0m
[38;2;255;255;255m[48;2;0;128;0m                                                                                [0m
[38;2;255;255;255m[48;2;0;128;0m                                                                                [0m
[38;2;255;255;255m[48;2;0;128;0m                                                                                [0m
[38;2;255;255;255m[48;2;0;128;0m                                                                                [0m
