crates/textual/tests/snapshots/examples_snapshot__snapshot_background_tint_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---
0%



25%




50%




75%




100%
