crates/textual/tests/snapshots/examples_snapshot__snapshot_background_transparency_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---
  10%     20%     30%     40%     50%     60%     70%     80%     90%     100%
