crates/textual/tests/snapshots/examples_snapshot__snapshot_border_all_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---
+----------------+                       ┏╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┓  ╔═════════════════╗
|     ascii      |         blank         ╏     dashed     ╏  ║     double      ║
+----------------+                       ┗╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┛  ╚═════════════════╝



┏━━━━━━━━━━━━━━━━┓                       ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  ▗▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▖
┃     heavy      ┃      hidden/none             hkey         ▐      inner      ▌
┗━━━━━━━━━━━━━━━━┛                       ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁  ▝▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▘



▛▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▜  ▊█████████████████▎  ╭────────────────╮  ┌─────────────────┐
▌     outer      ▐  ▊      panel      ▎  │     round      │  │      solid      │
▙▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▟  ▊▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▎  ╰────────────────╯  └─────────────────┘



▊▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▎  █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█  ▏                ▕  ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▊      tall      ▎  █      thick      █  ▏      vkey      ▕  ▎      wide       ▊
▊▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▎  █▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█  ▏                ▕  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
