crates/textual/tests/snapshots/examples_snapshot__snapshot_border_example_ansi.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_ansi_snapshot()
---
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m [38;2;255;0;0m[48;2;255;204;204m┌────────────────────────────────────────────────────────────────────────────┐[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;255;0;0m[48;2;255;204;204m│                                                                            │[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;255;0;0m[48;2;255;204;204m│                           My border is solid red                           │[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;255;0;0m[48;2;255;204;204m│                                                                            │[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;255;0;0m[48;2;255;204;204m└────────────────────────────────────────────────────────────────────────────┘[39m[48;2;255;255;255m [0m
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m [38;2;0;128;0m[48;2;204;230;204m┏╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┓[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;0;128;0m[48;2;204;230;204m╏                                                                            ╏[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;0;128;0m[48;2;204;230;204m╏                         My border is dashed green                          ╏[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;0;128;0m[48;2;204;230;204m╏                                                                            ╏[39m[48;2;255;255;255m [0m
[48;2;255;255;255m [38;2;0;128;0m[48;2;204;230;204m┗╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┛[39m[48;2;255;255;255m [0m
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m [0m[7m[38;2;0;0;255m[48;2;255;255;255m▊[0m[38;2;0;0;255m[48;2;204;204;255m▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔[48;2;255;255;255m▎[39m [0m
[48;2;255;255;255m [0m[7m[38;2;0;0;255m[48;2;255;255;255m▊[0m[38;2;0;0;255m[48;2;204;204;255m                                                                            [48;2;255;255;255m▎[39m [0m
[48;2;255;255;255m [0m[7m[38;2;0;0;255m[48;2;255;255;255m▊[0m[38;2;0;0;255m[48;2;204;204;255m                           My border is tall blue                           [48;2;255;255;255m▎[39m [0m
[48;2;255;255;255m [0m[7m[38;2;0;0;255m[48;2;255;255;255m▊[0m[38;2;0;0;255m[48;2;204;204;255m                                                                            [48;2;255;255;255m▎[39m [0m
[48;2;255;255;255m [0m[7m[38;2;0;0;255m[48;2;255;255;255m▊[0m[38;2;0;0;255m[48;2;204;204;255m▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁[48;2;255;255;255m▎[39m [0m
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m                                                                                [0m
[48;2;255;255;255m                                                                                [0m
