crates/textual/tests/snapshots/examples_snapshot__snapshot_border_example_svg.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: "canvas.to_svg(Some(\"Border Example\"))"
---
<svg class="rich-terminal" viewBox="0 0 976 585.6" xmlns="http://www.w3.org/2000/svg">
    <!-- Generated by texrs -->
    <style>

    @font-face {
        font-family: "Fira Code";
        src: local("FiraCode-Regular"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff2/FiraCode-Regular.woff2") format("woff2"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff/FiraCode-Regular.woff") format("woff");
        font-style: normal;
        font-weight: 400;
    }
    @font-face {
        font-family: "Fira Code";
        src: local("FiraCode-Bold"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff2/FiraCode-Bold.woff2") format("woff2"),
                url("https://cdnjs.cloudflare.com/ajax/libs/firacode/6.2.0/woff/FiraCode-Bold.woff") format("woff");
        font-style: bold;
        font-weight: 700;
    }

    .terminal-matrix {
        font-family: Fira Code, monospace, monospace;
        font-size: 20px;
        line-height: 24.4px;
        font-variant-east-asian: full-width;
    }
    .terminal-r1 { fill: #ff0000 }
    .terminal-r2 { fill: #008000 }
    .terminal-r3 { fill: #0000ff }
    </style>
    <defs>
    <clipPath id="terminal-clip">
      <rect x="0" y="0" width="976" height="585.6" />
    </clipPath>
    <clipPath id="terminal-line-0">
      <rect x="0" y="0" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-1">
      <rect x="0" y="24.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-2">
      <rect x="0" y="48.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-3">
      <rect x="0" y="73.2" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-4">
      <rect x="0" y="97.6" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-5">
      <rect x="0" y="122" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-6">
      <rect x="0" y="146.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-7">
      <rect x="0" y="170.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-8">
      <rect x="0" y="195.2" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-9">
      <rect x="0" y="219.59999" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-10">
      <rect x="0" y="244" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-11">
      <rect x="0" y="268.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-12">
      <rect x="0" y="292.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-13">
      <rect x="0" y="317.19998" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-14">
      <rect x="0" y="341.6" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-15">
      <rect x="0" y="366" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-16">
      <rect x="0" y="390.4" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-17">
      <rect x="0" y="414.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-18">
      <rect x="0" y="439.19998" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-19">
      <rect x="0" y="463.6" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-20">
      <rect x="0" y="488" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-21">
      <rect x="0" y="512.39996" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-22">
      <rect x="0" y="536.8" width="976" height="24.65"/>
    </clipPath>
    <clipPath id="terminal-line-23">
      <rect x="0" y="561.2" width="976" height="24.65"/>
    </clipPath>
    </defs>
    <g transform="translate(0, 0)" clip-path="url(#terminal-clip)">
    <rect fill="#ffffff" x="0" y="0" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="24.4" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffcccc" x="12.2" y="24.4" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="24.4" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="48.8" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffcccc" x="12.2" y="48.8" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="48.8" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="73.2" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffcccc" x="12.2" y="73.2" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="73.2" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="97.6" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffcccc" x="12.2" y="97.6" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="97.6" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="122" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffcccc" x="12.2" y="122" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="122" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="146.4" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="170.8" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#cce5cc" x="12.2" y="170.8" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="170.8" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="195.2" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#cce5cc" x="12.2" y="195.2" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="195.2" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="219.59999" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#cce5cc" x="12.2" y="219.59999" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="219.59999" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="244" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#cce5cc" x="12.2" y="244" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="244" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="268.4" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#cce5cc" x="12.2" y="268.4" width="951.6" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="963.8" y="268.4" width="12.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="292.8" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="317.19998" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ccccff" x="24.4" y="317.19998" width="927.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="951.6" y="317.19998" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="341.6" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ccccff" x="24.4" y="341.6" width="927.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="951.6" y="341.6" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="366" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ccccff" x="24.4" y="366" width="927.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="951.6" y="366" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="390.4" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ccccff" x="24.4" y="390.4" width="927.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="951.6" y="390.4" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="414.8" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ccccff" x="24.4" y="414.8" width="927.2" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="951.6" y="414.8" width="24.4" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="439.19998" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="463.6" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="488" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="512.39996" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="536.8" width="976" height="24.4" shape-rendering="crispEdges"/>
    <rect fill="#ffffff" x="0" y="561.2" width="976" height="24.4" shape-rendering="crispEdges"/>
    <g class="terminal-matrix">
    <text class="terminal-default" x="0" y="44.8" textLength="12.2" clip-path="url(#terminal-line-1)">&#160;</text>
    <text class="terminal-r1" x="12.2" y="44.8" textLength="951.6" clip-path="url(#terminal-line-1)">┌────────────────────────────────────────────────────────────────────────────┐</text>
    <text class="terminal-default" x="0" y="69.2" textLength="12.2" clip-path="url(#terminal-line-2)">&#160;</text>
    <text class="terminal-r1" x="12.2" y="69.2" textLength="951.6" clip-path="url(#terminal-line-2)">│&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;│</text>
    <text class="terminal-default" x="0" y="93.6" textLength="12.2" clip-path="url(#terminal-line-3)">&#160;</text>
    <text class="terminal-r1" x="12.2" y="93.6" textLength="951.6" clip-path="url(#terminal-line-3)">│&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;My&#160;border&#160;is&#160;solid&#160;red&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;│</text>
    <text class="terminal-default" x="0" y="118" textLength="12.2" clip-path="url(#terminal-line-4)">&#160;</text>
    <text class="terminal-r1" x="12.2" y="118" textLength="951.6" clip-path="url(#terminal-line-4)">│&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;│</text>
    <text class="terminal-default" x="0" y="142.4" textLength="12.2" clip-path="url(#terminal-line-5)">&#160;</text>
    <text class="terminal-r1" x="12.2" y="142.4" textLength="951.6" clip-path="url(#terminal-line-5)">└────────────────────────────────────────────────────────────────────────────┘</text>
    <text class="terminal-default" x="0" y="191.2" textLength="12.2" clip-path="url(#terminal-line-7)">&#160;</text>
    <text class="terminal-r2" x="12.2" y="191.2" textLength="951.6" clip-path="url(#terminal-line-7)">┏╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┓</text>
    <text class="terminal-default" x="0" y="215.59999" textLength="12.2" clip-path="url(#terminal-line-8)">&#160;</text>
    <text class="terminal-r2" x="12.2" y="215.59999" textLength="951.6" clip-path="url(#terminal-line-8)">╏&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;╏</text>
    <text class="terminal-default" x="0" y="240" textLength="12.2" clip-path="url(#terminal-line-9)">&#160;</text>
    <text class="terminal-r2" x="12.2" y="240" textLength="951.6" clip-path="url(#terminal-line-9)">╏&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;My&#160;border&#160;is&#160;dashed&#160;green&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;╏</text>
    <text class="terminal-default" x="0" y="264.4" textLength="12.2" clip-path="url(#terminal-line-10)">&#160;</text>
    <text class="terminal-r2" x="12.2" y="264.4" textLength="951.6" clip-path="url(#terminal-line-10)">╏&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;╏</text>
    <text class="terminal-default" x="0" y="288.8" textLength="12.2" clip-path="url(#terminal-line-11)">&#160;</text>
    <text class="terminal-r2" x="12.2" y="288.8" textLength="951.6" clip-path="url(#terminal-line-11)">┗╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍╍┛</text>
    <text class="terminal-default" x="0" y="337.6" textLength="12.2" clip-path="url(#terminal-line-13)">&#160;</text>
    <text class="terminal-r3" x="12.2" y="337.6" textLength="12.2" clip-path="url(#terminal-line-13)">▊</text>
    <text class="terminal-r3" x="24.4" y="337.6" textLength="939.39996" clip-path="url(#terminal-line-13)">▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▎</text>
    <text class="terminal-default" x="0" y="362" textLength="12.2" clip-path="url(#terminal-line-14)">&#160;</text>
    <text class="terminal-r3" x="12.2" y="362" textLength="12.2" clip-path="url(#terminal-line-14)">▊</text>
    <text class="terminal-r3" x="24.4" y="362" textLength="939.39996" clip-path="url(#terminal-line-14)">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;▎</text>
    <text class="terminal-default" x="0" y="386.4" textLength="12.2" clip-path="url(#terminal-line-15)">&#160;</text>
    <text class="terminal-r3" x="12.2" y="386.4" textLength="12.2" clip-path="url(#terminal-line-15)">▊</text>
    <text class="terminal-r3" x="24.4" y="386.4" textLength="939.39996" clip-path="url(#terminal-line-15)">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;My&#160;border&#160;is&#160;tall&#160;blue&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;▎</text>
    <text class="terminal-default" x="0" y="410.8" textLength="12.2" clip-path="url(#terminal-line-16)">&#160;</text>
    <text class="terminal-r3" x="12.2" y="410.8" textLength="12.2" clip-path="url(#terminal-line-16)">▊</text>
    <text class="terminal-r3" x="24.4" y="410.8" textLength="939.39996" clip-path="url(#terminal-line-16)">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;▎</text>
    <text class="terminal-default" x="0" y="435.19998" textLength="12.2" clip-path="url(#terminal-line-17)">&#160;</text>
    <text class="terminal-r3" x="12.2" y="435.19998" textLength="12.2" clip-path="url(#terminal-line-17)">▊</text>
    <text class="terminal-r3" x="24.4" y="435.19998" textLength="939.39996" clip-path="url(#terminal-line-17)">▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▎</text>
    </g>
    </g>
</svg>
