crates/textual/tests/snapshots/examples_snapshot__snapshot_border_sub_title_align_all_example.snap
---
source: crates/textual/tests/examples_snapshot.rs
expression: canvas.to_snapshot()
---
  ▏  Border title      ▕          ╭─ Lef… ─╮              ▁▁▁▁▁ Left ▁▁▁▁▁
  ▏This is the story of▕          │a Python│              ▎developer that▊
  ▏   Border subtitle  ▕          ╰─ Cen… ─╯              ▔▔▔▔▔ @@@ ▔▔▔▔▔▔





     +--------------+                                  ─Title─────────────────
     |had to fill up|             nine labels          and ended up redoing it
     +- Left -------+                                  ──────────────Subtitle─




─Title, but really looo…─
                                ─Title, but r…─          ─Title, but reall…─
  because the first try         had some labels          that were too long.
                                ─Subtitle, bu…─          ─Subtitle, but re…─
─Subtitle, but really l…─
